# game_of_life

./: Cargo.toml
src/: life.rs  main.rs
