[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: Remove 'dynamic_linking' before building for distribution
[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
rand = "0.8.5"
rayon = "1.7.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
